--- a/index.html
+++ b/index.html
@@ -4,35 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is the First Assignment</title>
-
+    <link rel="stylesheet" href="css/mystyles.css">
 </head>
-<style>
 
-    body {
-        background-color: #CCCCFF;
-    }
-    p {
-        text-align: center;
-        font-size: 20px;
-    }
-
-    h1 {
-        text-align: center;
-    }
-
-    img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    a {
-        text-align: center;
-    }
-    div {
-        text-align: center;
-    }
-</style>
 
 <body>
     <!-- I added Horizontal Rule which is <hr> -->
