Adding a Sentence to my project

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 
         <!-- This code displays the image on the webpage -->
         <img src="/assets/Ekuase.jpeg" alt="Ekuase" width="200" height="300"/>
+
+        <!-- Adding a Line -->
+        <p>This is the personal story</p>
+
+      
+
     </div>
     
 
